switched to graphcomment

--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -22,7 +22,7 @@
      {{ .Content }}
    </section>
    {{ partial "tags.html" . }}
-   {{ template "_internal/disqus.html" . }}
+   {{ partial "graphcomment.html" . }}
   </article>
  
  <div class="ph3 mt2 mt6-ns">
