--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -5,15 +5,16 @@
 
 {{ define "main" }}
 <div class="flex-l mt2 mw8 center">
- <article class="center cf pb5 pt3 ph3 ph4-ns mw10">
-   <h1 class="f2 athelas">
+ <article class="center cf pt4 pb1  ph3 ph4-ns mw10">
+    <time class="f6  pb1 dib mid-gray normal" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+        {{ .Date.Format "Jan 2, 2006" }}
+      </time>
+     <h1 class="f2 mt0 athelas">
      {{ .Title }}
    </h1>
+
      {{/* TODO: Add Hugo author  */}}
      {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-   <time class="f6 mv4 dib tracked" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-     {{ .Date.Format "Jan 2, 2006" }}
-   </time>
    <section class="nested-copy-line-height lh-copy serif f4 nested-links nested-img mid-gray">
      {{ .Content }}
    </section>
