--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,8 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
-    <a href="{{ .Site.BaseURL }}" class="f3 fw2 hover-white no-underline white-90 dib">
+    <a href="{{ .Site.BaseURL }}" class="f5 fw2 hover-white no-underline white-90 dib">
       {{ .Site.Title }}
+      <div class="f7 white-70 pad-2 sub-space">{{ .Site.Params.subtitle }}</div>
     </a>
     <div class="flex-l items-center">
       {{ if .Site.Menus.main }}
