--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -54,6 +54,13 @@
       .nested-img img {
         width: initial;
       }
+      a {
+        color: #0066ff;
+      }
+      pre {
+        overflow: auto;
+        background-color: #e1e1e1;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7" role="main">
