--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -13,7 +13,7 @@
         </div>
         {{ end }}
         <div class="blah w-100{{ if .Params.featured_image }} w-60-ns pl3-ns{{ end }}">
-          <a href="{{.URL}}" class="color-inherit link hover-bg-moon-gray">
+          <a href="{{.URL}}" class="link hover-bg-moon-gray">
             <h1 class="f3 fw1 athelas mv0 lh-title">
               {{ .Title }}
             </h1>
