--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -61,6 +61,12 @@
         overflow: auto;
         background-color: #e1e1e1;
       }
+      a.linkunder {
+        text-decoration: none;
+      }
+      a:hover h1, a.linkunder:hover {
+        text-decoration: underline;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7" role="main">
