--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,22 +1,24 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l justify-between items-center center">
-    <a href="{{ .Site.BaseURL }}" class="f5 fw2 hover-white no-underline white-90 dib">
-      {{ .Site.Title }}
-      <div class="f7 white-70 pad-2 sub-space">{{ .Site.Params.subtitle }}</div>
-    </a>
-    <div class="flex-l items-center">
-      {{ if .Site.Menus.main }}
-        <ul class="pl0 mr3">
-          {{ range .Site.Menus.main }}
-          <li class="list f5 f4-ns fw4 dib pr3">
-            <a class="hover-white no-underline white-90" href="{{ .URL }}" title="{{ .Name }} page">
-              {{ .Name }}
-            </a>
-          </li>
-          {{ end }}
-        </ul>
-      {{ end }}
-      {{ partial "social-follow.html" . }}
-    </div>
+  <div class="flex-l justify-center items-center center">
+    <section class="w-100 mw8">
+      <a href="{{ .Site.BaseURL }}" class="f5 fw2 hover-white no-underline white-90 dib">
+        {{ .Site.Title }}
+        <div class="f7 white-70 pad-2 sub-space">{{ .Site.Params.subtitle }}</div>
+      </a>
+      <div class="flex-l items-center">
+        {{ if .Site.Menus.main }}
+          <ul class="pl0 mr3">
+            {{ range .Site.Menus.main }}
+            <li class="list f5 f4-ns fw4 dib pr3">
+              <a class="hover-white no-underline white-90" href="{{ .URL }}" title="{{ .Name }} page">
+                {{ .Name }}
+              </a>
+            </li>
+            {{ end }}
+          </ul>
+        {{ end }}
+        {{ partial "social-follow.html" . }}
+      </div>
+    </section>
   </div>
 </nav>
