Style updates and youtube fix

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -67,6 +67,9 @@
       a:hover h1, a.linkunder:hover {
         text-decoration: underline;
       }
+      .word-wrap {
+        word-wrap: break-word;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7" role="main">
