--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -5,23 +5,24 @@
 
 {{ define "main" }}
 <div class="flex-l mt2 mw8 center">
- <article class="center cf pt4 pb1  ph3 ph4-ns mw10">
-     <h1 class="f4 mt0 athelas">
-     {{ .Title }}
-     </h1>
-     <time class="f6  pb1 dib mid-gray normal" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
-      {{ .Date.Format "Jan 2, 2006" }}
-     </time>
+  <div class="mw10 ph3 ph0-ns">
+    <article class="center cf pt4 pb1 mw7 word-wrap">
+        <h1 class="f4 mt0 athelas">
+        {{ .Title }}
+        </h1>
+        <time class="f6  pb1 dib mid-gray normal" datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+          {{ .Date.Format "Jan 2, 2006" }}
+        </time>
 
-     {{/* TODO: Add Hugo author  */}}
-     {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
-   <section class="nested-copy-line-height lh-copy serif f6 nested-links nested-img mid-gray">
-     {{ .Content }}
-   </section>
-   {{ partial "tags.html" . }}
-   <div class="mt5"></div>
-   {{ partial "graphcomment.html" . }}
-  </article>
- 
+        {{/* TODO: Add Hugo author  */}}
+        {{/* Hugo uses Go's date formatting is set by example. Here are two formats */}}
+      <section class="nested-copy-line-height lh-copy serif f6 nested-links nested-img mid-gray">
+        {{ .Content }}
+      </section>
+      {{ partial "tags.html" . }}
+      <div class="mt5"></div>
+      {{ partial "graphcomment.html" . }}
+      </article>
+  </div>
 </div>
 {{ end }}
