--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,5 +1,5 @@
 {{ $featured_image := .Params.featured_image }}
-<article class="bb b--black-10">
+<article class="bb b--black-10 word-wrap">
     <div class="db pb4 {{ if .Params.featured_image }} pt3{{ end }} ph3 ph0-l no-underline dark-gray">
       <div class="flex flex-column flex-row-ns">
         
