--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,6 +1,6 @@
 {{ $featured_image := .Params.featured_image }}
 <article class="bb b--black-10 word-wrap">
-    <div class="db pb4 {{ if .Params.featured_image }} pt3{{ end }} ph3 ph0-l no-underline dark-gray">
+    <div class="db pb4 {{ if .Params.featured_image }} pt3{{ end }} no-underline dark-gray">
       <div class="flex flex-column flex-row-ns">
         
         <div class="pr3-ns {{ if .Params.featured_image }} mb3{{ end }} mb0-ns w-100 w-40-ns">
