--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
     {{/* Derive the section name  */}}
     {{ $section_name := index (.Site.Params.mainSections) 0 }}
 
-    <div class="pa4-ns w-100 center">
+    <div class="w-100 center">
       {{/* Use $section_name to get the section title. Use "with" to only show it if it exists */}}
        {{ with .Site.GetPage "section" $section_name }}
           <!-- <h1 class="flex-none">
