--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -72,7 +72,7 @@
       }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
-    <main class="pb7 ph3 ph4-ns" role="main">
+    <main class="pb7 ph3 pt2 ph4-ns" role="main">
       {{ block "main" . }}{{ end }}
     </main>
     {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
