--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -72,6 +72,15 @@
       .word-wrap {
         word-wrap: break-word;
       }
+      .lh-copy {
+        line-height: 1.42857143;
+      }
+      .title-font {
+        font-weight: 400;
+      }
+      .body-font {
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7 ph3 pt2 ph4-ns" role="main">
