--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -15,15 +15,15 @@
 
         <div class="w-100 w-60-ns pl3-ns">
           <a href="{{.URL}}" class="link hover-bg-moon-gray">
-            <h1 class="f4 fw1 athelas mv0 lh-title">
+            <h1 class="f4 title-font mv0 lh-title">
               {{ .Title }}
             </h1>
             {{ if .Date }}
-            <div class="f6 pt1 pb2 mid-gray">{{ .Date.Format "Jan 2, 2006" }}
+            <div class="f7 pt1 pb2 mid-gray">{{ .Date.Format ($.Param "date_format") }}
             </div>
             {{ end }}
             </a>
-        <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
+        <div class="f6 lh-copy nested-copy-line-height nested-links">
             {{ .Summary }}
           </div>
           <a href="{{.URL}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{$.Param "read_more_copy" | default "read more" }}</a>
