--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,7 +40,7 @@
             <span class="f5 fw4">
               {{ .Title }}
             </span>{{ if .Date }}
-            <span class="f6 dib mid-gray">({{ .Date.Format "2006, Jan" }})
+            <span class="f6 dib mid-gray">({{ .Date.Format "Jan, 2006" }})
             </span>
             {{ end }}
         </a>
