--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -18,12 +18,12 @@
             <h1 class="f4 title-font mv0 lh-title">
               {{ .Title }}
             </h1>
-            {{ if .Date }}
+            <!-- {{ if .Date }}
             <div class="f7 pt1 pb2 mid-gray">{{ .Date.Format ($.Param "date_format") }}
             </div>
-            {{ end }}
+            {{ end }} -->
             </a>
-        <div class="f6 lh-copy nested-copy-line-height nested-links">
+        <div class="f5 lh-copy nested-copy-line-height nested-links">
             {{ .Summary }}
           </div>
           <a href="{{.URL}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{$.Param "read_more_copy" | default "read more" }}</a>
