--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -81,6 +81,12 @@
       .body-font {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       }
+      .mw6 {
+        max-width: 36rem;
+      }
+      .mt3and5 {
+        margin-top: 1.5rem;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7 ph3 pt2 ph4-ns" role="main">
