--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,6 +1,6 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
-  <div class="flex-l justify-center items-center center">
-    <section class="w-100 mw7">
+  <div class="flex-l  items-center center">
+    <section class="w-100 mw6">
       <a href="{{ .Site.BaseURL }}" class="f5 fw4 hover-white no-underline white-90 dib">
         {{ .Site.Title }}
         <div class="f7 white-70 pad-2 sub-space">{{ .Site.Params.subtitle }}</div>
