--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,23 +1,23 @@
 {{ $featured_image := .Params.featured_image }}
-<article class="bb b--black-10 word-wrap">
+<article class="bb b--black-10 word-wrap pa2 mt2 mb4">
     <div class="db pb4 {{ if .Params.featured_image }} pt3{{ end }} no-underline dark-gray">
-      <div class="flex flex-column flex-row-ns">
+      <div class="flex flex-column">
         
-        <div class="pr3-ns {{ if .Params.featured_image }} mb3{{ end }} mb0-ns w-100 w-40-ns">
-            <a href="{{.URL}}" class="db grow">
-                {{ if .Params.featured_image }} 
-                {{/* Trim slash, add absURL to ensure image works no matter where site is */}} 
-                {{ $featured_image := (trim $featured_image "/") | absURL }}
-                  <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
-                  {{ end }}
-                </a>
-        </div>
-
-        <div class="w-100 w-60-ns pl3-ns">
+        <div class="w-100">
           <a href="{{.URL}}" class="link hover-bg-moon-gray">
-            <h1 class="f4 title-font mv0 lh-title">
+            <h1 class="f4 title-font mv0 lh-title pt2">
               {{ .Title }}
             </h1>
+            <div class="{{ if .Params.featured_image }} mb3 mt3and5 {{ end }} w-100">
+              <a href="{{.URL}}" class="db grow">
+                  {{ if .Params.featured_image }} 
+                  {{/* Trim slash, add absURL to ensure image works no matter where site is */}} 
+                  {{ $featured_image := (trim $featured_image "/") | absURL }}
+                    <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
+                    {{ end }}
+                  </a>
+          </div>
+  
             <!-- {{ if .Date }}
             <div class="f7 pt1 pb2 mid-gray">{{ .Date.Format ($.Param "date_format") }}
             </div>
