--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -62,12 +62,11 @@
         overflow: auto;
         background-color: #e1e1e1;
       }
-      a.linkunder {
+      a {
         text-decoration: none;
       }
-      a:hover h1, a.linkunder:hover {
+      a:hover {
         text-decoration: underline;
-        text-decoration-skip: ink;
       }
       .word-wrap {
         word-wrap: break-word;
