--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -86,6 +86,13 @@
       .mt3and5 {
         margin-top: 1.5rem;
       }
+      article {
+        box-shadow: 0 1px 3px rgba(0,0,0,.1);
+        background: white;
+      }
+      body {
+        background: #ecf0f5;
+      }
     </style>
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7 ph3 pt2 ph4-ns" role="main">
