--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,34 +1,33 @@
 {{ $featured_image := .Params.featured_image }}
-<article class="bb b--black-10 word-wrap pa4 mt2 mb4">
-    <div class="db pb4 no-underline dark-gray">
-      <div class="flex flex-column">
-        
-        <div class="w-100">
-          <a href="{{.URL}}" class="link hover-bg-moon-gray">
-            <h1 class="f4 title-font mv0 lh-title pt0 mt0">
-              {{ .Title }}
-            </h1>
-            <div class="{{ if .Params.featured_image }} mb3 mt3and5 {{ end }} w-100">
-              <a href="{{.URL}}" class="db grow">
-                  {{ if .Params.featured_image }} 
-                  {{/* Trim slash, add absURL to ensure image works no matter where site is */}} 
-                  {{ $featured_image := (trim $featured_image "/") | absURL }}
-                    <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
-                    {{ end }}
-                  </a>
-          </div>
-  
-            <!-- {{ if .Date }}
-            <div class="f7 pt1 pb2 mid-gray">{{ .Date.Format ($.Param "date_format") }}
-            </div>
-            {{ end }} -->
-            </a>
-        <div class="f5 lh-copy nested-copy-line-height nested-links">
-            {{ .Summary }}
-          </div>
-          <a href="{{.URL}}" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">{{$.Param "read_more_copy" | default "read more" }}</a>
+<article class="bb b--black-10 word-wrap">
+  <a href="{{.URL}}" class="main-link">
+    <h1 class="f4 title-font lh-title pl4 pt4 pb3 mb2 mt2">
+      {{ .Title }}
+    </h1>
+    <span class="flex flex-column pa4 pb8 pt0">
+
+      <span class="w-100">
+        {{ if .Date }}
+        <p class="f7 pt3 pb3 mv0 mid-gray">{{ .Date.Format ($.Param "date_format") }}
+        </p>
+        {{ end }}
+        {{ if .Params.featured_image }}
+        <span class="{{ if .Params.featured_image }} mb3 mt3and5 {{ end }} w-100">
+          {{/* Trim slash, add absURL to ensure image works no matter where site is */}}
+          {{ $featured_image := (trim $featured_image "/") | absURL }}
+          <img src="{{ $featured_image }}" class="img" alt="image from {{ .Title }}">
+        </span>
+        {{ end }}
+
+        <span class="f5 lh-copy nested-copy-line-height nested-links">
+          {{ .Summary }}
+        </span>
+        <div>
+          <span
+            class="dib bg-moon-gray br--top br--right f7 hover-bg-light-silver link mt2 ph3 pv2">{{$.Param "read_more_copy" | default "read more >" }}</span>
         </div>
-      </div>
-    </div>
+      </span>
+    </span>
+  </a>
 
 </article>
