--- a/layouts/index.html
+++ b/layouts/index.html
@@ -36,7 +36,7 @@
         <h1 class="f3">All Remaining Posts</h1>
         {{/* Now, range through the next four after the initial $n_posts items. Nest the requirements, "after" then "first" on the outside */}}
         {{ range (after $n_posts $section)  }}
-        <a href="{{ .URL }}" class="linkunder db pt2 pb2 mr3">
+        <a href="{{ .RelPermalink }}" class="linkunder db pt2 pb2 mr3">
             <span class="f5 fw4">
               {{ .Title }}
             </span>{{ if .Date }}
@@ -48,7 +48,7 @@
 
         {{/* As above, Use $section_name to get the section title, and URL. Use "with" to only show it if it exists */}}
         <!-- {{ with .Site.GetPage "section" $section_name }}
-          <a href="{{ .URL }}" class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All {{.Title }}</a>
+          <a href="{{ .RelPermalink }}" class="link db f6 pa2 br3 bg-mid-gray white dim w4 tc">All {{.Title }}</a>
         {{ end }} -->
         </section>
       {{ end }}
