--- a/layouts/partials/summary-with-image.html
+++ b/layouts/partials/summary-with-image.html
@@ -1,7 +1,7 @@
 {{ $featured_image := .Params.featured_image }}
 <article class="bb b--black-10 word-wrap">
   <a href="{{.RelPermalink}}" class="main-link">
-    <h1 class="f4 title-font lh-title pl4 pt4 pb3 mb2 mt2">
+    <h1 class="f4 title-font lh-title ph4 pv4 mb2 mt2">
       {{ .Title }}
     </h1>
     <span class="flex flex-column pa4 pb8 pt0">
