--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -8,7 +8,7 @@
   <div>
     <a href="javascript:history.go(-1)">← back</a>
     <article class="center cf word-wrap mt3">
-      <h1 class="f3 title-font pl4 pt4 pb3 mt2">
+      <h1 class="f3 title-font ph4 pv4 mt2">
         {{ .Title }}
       </h1>
 
