--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,119 +1,189 @@
 <!DOCTYPE html>
 <html lang="{{ $.Site.LanguageCode | default "en" }}">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
-    <title>{{ block "title" . }}{{ .Site.Title }} {{ with .Title }} | {{ . }}{{ end }}{{ end }}</title>
-    <meta name="HandheldFriendly" content="True">
-    <meta name="MobileOptimized" content="320">
 
-    <meta name="viewport" content="width=device-width,minimum-scale=1">
-    {{ .Hugo.Generator }}
-    {{/* NOTE: For Production make sure you add `HUGO_ENV="production"` before your build command */}}
-    {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
-      <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
-    {{ else }}
-      <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
-    {{ end }}
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  {{/* NOTE: the Site's title, and if there is a page title, that is set too */}}
+  <title>{{ block "title" . }}{{ .Site.Title }} {{ with .Title }} | {{ . }}{{ end }}{{ end }}</title>
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
 
-    <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
-    {{ block "favicon" . }}
-      {{ partial "site-favicon.html" . }}
-    {{ end }}
+  <meta name="viewport" content="width=device-width,minimum-scale=1">
+  {{ .Hugo.Generator }}
+  {{/* NOTE: For Production make sure you add `HUGO_ENV="production"` before your build command */}}
+  {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
+  <META NAME="ROBOTS" CONTENT="INDEX, FOLLOW">
+  {{ else }}
+  <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
+  {{ end }}
 
-    {{ range .AlternativeOutputFormats -}}
-    <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
-    {{ end -}}
+  <link href='{{ "dist/main.css" | absURL }}' rel='stylesheet' type="text/css" />
+  {{ block "favicon" . }}
+  {{ partial "site-favicon.html" . }}
+  {{ end }}
 
-    {{/* NOTE: These Hugo Internal Templates can be found starting at https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L158 */}}
-    {{- template "_internal/opengraph.html" . -}}
-    {{- template "_internal/google_news.html" . -}}
-    {{- template "_internal/schema.html" . -}}
-    {{- template "_internal/twitter_cards.html" . -}}
+  {{ range .AlternativeOutputFormats -}}
+  <link rel="{{ .Rel }}" type="{{ .MediaType.Type }}" href="{{ .Permalink | safeURL }}">
+  {{ end -}}
 
-    {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
-      {{ template "_internal/google_analytics_async.html" . }}
-    {{ end }}
-  </head>
+  {{/* NOTE: These Hugo Internal Templates can be found starting at https://github.com/spf13/hugo/blob/master/tpl/tplimpl/template_embedded.go#L158 */}}
+  {{- template "_internal/opengraph.html" . -}}
+  {{- template "_internal/google_news.html" . -}}
+  {{- template "_internal/schema.html" . -}}
+  {{- template "_internal/twitter_cards.html" . -}}
 
-  <body class="ma0 {{ $.Param "body_classes"  | default "avenir bg-near-white"}}{{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
-    <style>
-      .shadow-bottom {
-        -webkit-box-shadow: 0px 0px 15px 0px rgba(175, 175, 175, 1);
-        -moz-box-shadow:    0px 0px 15px 0px rgba(175, 175, 175, 1);
-        box-shadow:         0px 0px 15px 0px rgba(175, 175, 175, 1);
-      }
-      .pad-2 {
-        padding: 2px 0;
-      }
-      .sub-space {
-        letter-spacing: 0.4px;
-      }
-      .nested-img img {
-        width: initial;
-        height: auto;
-      }
-      a {
-        color: #0066ff;
-      }
-      pre {
-        overflow: auto;
-        background-color: #e1e1e1;
-      }
-      a {
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-      .word-wrap {
-        word-wrap: break-word;
-      }
-      .lh-copy {
-        line-height: 1.42857143;
-      }
-      .title-font {
-        font-weight: 700;
-        color: #333;
-        border-bottom: 1px solid #333;
-        /* color: #0066cc; */
-      }
-      .body-font {
-        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      }
-      .mw6 {
-        max-width: 36rem;
-      }
-      .mt3and5 {
-        margin-top: 1.5rem;
-      }
-      article {
-        background: white;
-        border-radius: 3px;
-      }
-      body {
-        background: #ecf0f5;
-      }
-      .main-link {
-        display: block;
-        color: inherit;
+  {{ if eq (getenv "HUGO_ENV") "production" | or (eq .Site.Params.env "production")  }}
+  {{ template "_internal/google_analytics_async.html" . }}
+  {{ end }}
+</head>
 
-        /* background: red; */
-      }
-      .main-link:hover {
-        text-decoration: none;
-        box-shadow: 0 0 10px 3px rgba(0,0,0,.12);
-      }
-      article img {
-        display: block;
-      }
-    </style>
-    {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
-    <main class="pb7 ph0 pt2 ph4-ns" role="main">
-      {{ block "main" . }}{{ end }}
-    </main>
-    {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
-    {{ block "scripts" . }}{{ partial "site-scripts.html" . }}{{ end }}
-  </body>
+<body
+  class="ma0 {{ $.Param "body_classes"  | default "avenir bg-near-white"}}{{ with getenv "HUGO_ENV" }} {{ . }}{{ end }}">
+  <style>
+    .shadow-bottom {
+      -webkit-box-shadow: 0px 0px 15px 0px rgba(175, 175, 175, 1);
+      -moz-box-shadow: 0px 0px 15px 0px rgba(175, 175, 175, 1);
+      box-shadow: 0px 0px 15px 0px rgba(175, 175, 175, 1);
+    }
+
+    .pad-2 {
+      padding: 2px 0;
+    }
+
+    .sub-space {
+      display: block;
+      font-size: 20px;
+      font-weight: 400;
+      padding-top: 10px;
+    }
+
+    .nested-img img {
+      width: initial;
+      height: auto;
+    }
+
+    a {
+      color: #0066ff;
+    }
+
+    pre {
+      overflow: auto;
+      color: #ddd;
+      white-space: pre;
+
+      border: 1px solid #41a85f;
+      border-left: none;
+      border-right: none;
+
+      hyphens: none;
+      position: relative;
+      border-radius: 2px;
+
+      margin-left: -32px;
+      margin-right: -32px;
+      padding: 0 16px;
+      box-shadow: 0 2px 14px 0px #0b0107;
+    }
+
+    a {
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+
+    .word-wrap {
+      word-wrap: break-word;
+    }
+
+    .lh-copy {
+      line-height: 1.42857143;
+    }
+
+    .title-font {
+      font-weight: 700;
+      color: #cecece;
+      /* color: #0066cc; */
+    }
+
+    .body-font {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .mw6 {
+      max-width: 36rem;
+    }
+
+    .mt3and5 {
+      margin-top: 1.5rem;
+    }
+
+    article {
+      background: #1b1b1b;
+      border-radius: 4px 4px;
+    }
+
+    body {
+      background: #2f3031;
+      color: #eee;
+    }
+
+    .main-link {
+      display: block;
+      color: inherit;
+
+      /* background: red; */
+    }
+
+    .main-link:hover {
+      text-decoration: none;
+      /* box-shadow: 0 0 10px 3px rgba(0, 0, 0, .12); */
+      /* box-shadow: 0 0 12px 7px rgba(0, 0, 0, .12); */
+    }
+
+    .summary-article:hover {
+      box-shadow: 0 0 12px 7px rgba(0, 0, 0, .12);
+    }
+
+    article img {
+      display: block;
+    }
+
+    .nested-links a {
+      color: #54acd2;
+      /* color: #eee; */
+      /* border-bottom:1px dotted #54acd2; */
+      font-variant: small-caps;
+      letter-spacing: 0.8px;
+      ;
+    }
+
+    .top-link:hover {
+      background: #464646;
+      border-radius: 4px;
+      text-decoration: none;
+    }
+
+    .gradient-top {
+      background: rgb(2, 0, 36);
+      background: linear-gradient(90deg, rgb(121, 66, 0) 0%, rgb(107, 74, 0) 35%, rgb(57, 42, 0) 100%);
+      height: 4px;
+      border-radius: 4px 4px 0 0;
+    }
+
+    .gradient-top.single,
+    .summary-article:hover .gradient-top {
+      background: linear-gradient(90deg, rgb(19, 99, 3) 0%, rgb(16, 68, 52) 35%, rgb(32, 45, 31) 100%);
+    }
+  </style>
+  {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
+  <main class="pb7 ph0 ph4-ns" role="main">
+    {{ block "main" . }}{{ end }}
+  </main>
+  {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
+  {{ block "scripts" . }}{{ partial "site-scripts.html" . }}{{ end }}
+</body>
+
 </html>
