--- a/layouts/partials/site-navigation.html
+++ b/layouts/partials/site-navigation.html
@@ -1,7 +1,7 @@
 <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l  items-center center">
     <section class="w-100 mw8 center">
-      <a href="{{ .Site.BaseURL }}" class="f5 fw4 hover-white no-underline white-90 dib">
+      <a href="{{ .Site.BaseURL }}" class="top-link pa3 f5 fw4 hover-white no-underline white-90 dib">
         {{ .Site.Title }}
         <div class="f7 white-70 pad-2 sub-space">{{ .Site.Params.subtitle }}</div>
       </a>
