Updated for iPad

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -179,7 +179,7 @@
     }
   </style>
   {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
-  <main class="pb7 ph0 ph4-ns" role="main">
+  <main class="pb7 ph0 ph4-ns ph0-m" role="main">
     {{ block "main" . }}{{ end }}
   </main>
   {{ block "footer" . }}{{ partial "site-footer.html" . }}{{ end }}
