--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -35,17 +35,19 @@
           {{ .Content }}
         </section>
         {{ partial "tags.html" . }}
-        <div class="mt5"></div>
-        <script src="https://utteranc.es/client.js"
-          repo="nokola/blog"
-          issue-term="pathname"
-          label="comment"
-          theme="github-dark"
-          crossorigin="anonymous"
-          async>
-        </script>
+        <div class="mt4"></div>
       </div>
     </article>
   </div>
+</div>
+<div class="mw8 center">
+  <script src="https://utteranc.es/client.js"
+    repo="nokola/blog"
+    issue-term="pathname"
+    label="comment"
+    theme="github-dark"
+    crossorigin="anonymous"
+    async>
+  </script>
 </div>
 {{ end }}
