--- a/themes/ananke/layouts/_default/list.html
+++ b/themes/ananke/layouts/_default/list.html
@@ -1,13 +1,13 @@
 {{ define "main" }}
   <article class="cf pa3 pa4-m pa4-l">
-    <div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">                
+    <div class="measure-wide-l center f4 lh-copy nested-copy-line-height nested-links nested-img mid-gray">
       {{ .Content }}
     </div>
   </article>
   <div class="mw8 center">
-    {{ $section := where .Data.Pages "Section" .Section }}
+    {{ $paginator := .Paginate (where .Data.Pages "Section" .Section) }}
     <section class="flex-ns flex-wrap justify-around mt5">
-      {{ range  $section }}
+      {{ range  $paginator.Pages }}
         <div class="relative w-100  mb4 bg-white">
           {{ partial "summary.html" . }}
         </div>
