Update blog font styles

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -109,7 +109,7 @@
     }
 
     .body-font {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: Georgia, "Times New Roman", Times, serif;
     }
 
     .mw6 {
@@ -121,7 +121,7 @@
     }
 
     article {
-      background: #1b1b1b;
+      /* background: #1b1b1b; */
       border-radius: 4px 4px;
     }
 
@@ -179,6 +179,9 @@
     }
     .utterances {
       margin-left: 0;
+    }
+    .f5 {
+      font-size: 18px;
     }
   </style>
   {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
